--- a/landing/index.html
+++ b/landing/index.html
@@ -146,7 +146,7 @@
       <h1>Вы&nbsp;являетесь владельцем заведения?</h1>
       <p>Сделаем так, чтобы о&nbsp;вашем ресторане или кафе узнало еще больше людей, которые будут готовить по&nbsp;вашим рецептам!</p>
       <img class="section__seven__img" src="../assets/photo-star-43ecf436beca7c99a3813ca48ca919e7a170df58f2b2cd5c37f4a0d0de66324b.png" />
-      <a href="http://localhost:3000/partners/index">Подробнее</a>
+      <a href="https://someth1ngwrong.github.io/Essen__partners/partners/index.html">Подробнее</a>
     </section>
 
     <section class="section__eight">
