написал основу и стили, пишу респонсив

--- a/landing/index.html
+++ b/landing/index.html
@@ -44,114 +44,129 @@
     <title>Essen</title>
   </head>
   <body>
+
     <section class="section__one">
+      <img class="section__one__plate" src="../assets/plate1.png" alt="">
       <img class="logo-bw" src="../assets/logo-bw-d9faa72d0cf4d57999310cbca69d0b8aaa939d737deea6d95f85b259f0216e35.svg" />
-      <img class="section__one__img" src="../assets/text1-8670a1a58a3eb8efe56f8c98a8f1c7d0a2e47725cfd036c0d43ff48214a39af5.svg" />
-      <img class="section__one__img__2" src="../assets/text2-c24f932d40df9767b96bd4d2a12a80be493bbcf17956e9cf6237a88c25d7e49b.svg" />
-      <p>Сборник кулинарных рецептов с&nbsp;гибкой заменой ингредиентов</p>
-      <a href="index#">Перейти</a>
+      <div class="section__one__group">
+        <img class="section__one__img" src="../assets/first-screen-2.svg" />
+        <img class="section__one__img__2" src="../assets/first-screen-1.svg" />
+        <p class="body">Сборник кулинарных рецептов<br>с&nbsp;гибкой заменой ингредиентов</p>
+        <a href="index#" class="body">Перейти</a>
+      </div>
       <div class="section__one__div">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div id="div__1" class="circle"></div>
+        <div id="div__1" class="circle"></div>
+        <div id="div__2" class="circle"></div>
+        <div id="div__3" class="circle"></div>
+        <div id="div__4" class="circle"></div>
+        <div id="div__5" class="circle"></div>
+        <div id="div__6" class="circle"></div>
+        <div id="div__7" class="circle"></div>
+        <div id="div__8" class="circle"></div>
+        <div id="div__9" class="circle"></div>
+        <div id="div__10" class="circle"></div>
+        <div id="div__11" class="circle"></div>
+        <div id="div__12" class="circle"></div>
+        <div id="div__13" class="circle"></div>
+        <div id="div__14" class="circle"></div>
+        <div id="div__15" class="circle"></div>
+        <div id="div__16" class="circle"></div>
+        <div id="div__17" class="circle"></div>
+        <div id="div__18" class="circle"></div>
+        <div id="div__19" class="circle"></div>
+        <div id="div__20" class="circle"></div>
       </div>
     </section>
 
-    <section class="section__two">
-      <h2>Essen&nbsp;&mdash; кулинарная книга, подстраивающая ингредиенты под ваши требования выбора еды. Главное отличие от&nbsp;кулинарного сайта&nbsp;&mdash; мы&nbsp;предлагаем <span>гибкую замену ингредиентов</span> в&nbsp;рецепте.</h2>
-    </section>
+    <div class="">
+      <nav>
+        <a class="body">Начать готовить</a>
+      </nav>
 
-    <section class="section__three">
-      <script src="../packs/js/application-bb4bfb0fd20ebbe63c07.js" data-turbolinks-track="reload"></script>
-      <h1>Essen cоздан чтобы помогать вам!</h1>
-      <img class="section__three__img" src="../assets/shape-star-f22e8aadc9cebcf90c46b79c602e8d89ef23089f15f77492ef42c71c44b10927.svg" />
-    </section>
+      <section class="section__two">
+        <h2>Essen&nbsp;&mdash; сайт рецептов,<br> на&nbsp;котором вы можете<br><span> заменять ингредиенты,<br> сохраняя свойства блюда</span>.</h2>
+        <div class="section__two__ingredients">
+          <div class="cheese">Сыр</div>
+          <div class="tvorog">Творог</div>
+          <div class="tofu">Тофу</div>
+          <div class="yeast">Пищевые дрожжи</div>
+          <div class="cashew">Паста из кешью</div>
+        </div>
+      </section>
 
-    <section class="section__four">
-      <div class="section__four__one">
-        <h2>Заменяйте ингредиенты в&nbsp;рецептах под ваши предпочтения</h2>
-      </div>
 
-      <div class="section__four__two">
-        <h2>Выбирайте из&nbsp;рецептов, подобранных под&nbsp;вас</h2>
-      </div>
 
-      <div class="section__four__three">
-        <h2>Экономьте время на&nbsp;поиске рецепта с&nbsp;заменой продуктов</h2>
-      </div>
+      <section class="section__five">
+        <div class="section__five__div">
+          <img class="section__five__div__img" src="../assets/shape-inverse-03d1d73e2c55e8267cb1fb43d8e311dd2d002a9fac820afd605ef94b29a4f7d4.svg" />
+        </div>
+        <div class="section__five__h2">
+          <h2>Когда сервис поможет вам?</h2>
+          <h2>Когда дома нет некоторых продуктов, а&nbsp;идти в&nbsp;магазин не&nbsp;хочется</h2>
+          <h2>Когда ингредиент не&nbsp;подходит вам по&nbsp;идеологическим или&nbsp;религиозным причинам</h2>
+          <h2>Когда у вас аллергия или&nbsp;непереносимость ингредиента</h2>
+          <h2>Когда не&nbsp;знаете, что&nbsp;приготовить на&nbsp;ужин</h2>
+          <h2>Когда нужно приготовить блюдо, которое подходит всем друзьям</h2>
+        </div>
+      </section>
 
-      <div class="section__four__four">
-        <h2>Сохраняйте рецепты в&nbsp;индивидуа&shy;льные подборки</h2>
-      </div>
-    </section>
+      <section class="section__four">
+        <div class="section__four__one">
+          <h2>Заменяйте <br> ингредиенты <br> под&nbsp;ваши <br> предпочтения</h2>
+          <img src="../assets/plate2.png" alt="" class="section__four__plate">
+        </div>
 
-    <section class="section__five">
-      <div class="section__five__div">
-        <img class="section__five__div__img" src="../assets/shape-inverse-03d1d73e2c55e8267cb1fb43d8e311dd2d002a9fac820afd605ef94b29a4f7d4.svg" />
-      </div>
-      <div class="section__five__h2">
-        <h2>Когда сервис поможет?</h2>
-        <h2>При отсутствии некоторых ингредиентов дома</h2>
-        <h2>Если ингредиент не&nbsp;соответствует вашим этическим, идеологическим требованиям</h2>
-        <h2>Когда не&nbsp;хочется выходить в&nbsp;магазин за&nbsp;покупкой продуктов</h2>
-        <h2>Во&nbsp;время необходимости приготовления опредленного рецепта</h2>
-        <h2>Решить чем&nbsp;же поужинать сегодня</h2>
-        <h2>Вместе с&nbsp;друзьями выбрать блюдо, понравившееся всем</h2>
-      </div>
-    </section>
+        <div class="section__four__two">
+          <h2>Ищите рецепты <br> под&nbsp;свой тип питания</h2>
+          <!-- <img src="../assets/plate5.png" alt="" class="section__four__plate"> -->
+        </div>
 
-    <section class="section__six">
-      <h1>Вам не&nbsp;стоит беспокоиться за&nbsp;качество блюд</h1>
-      <p>Все рецепты и&nbsp;замены мы&nbsp;составили и&nbsp;подобрали вместе с&nbsp;кулинарными технологами</p>
-      <img class="section__six__img" src="../assets/plate-purple-58484c9c8e199c11cb2f92ce9c9a281bf518b146033291474e8679052ceab088.png" />
-    </section>
+        <div class="section__four__three">
+          <h2>Пробуйте новые рецепты из&nbsp;наших подборок</h2>
+          <!-- <img src="../assets/plate6.png" alt="" class="section__four__plate"> -->
+        </div>
 
-    <section class="section__seven">
-      <h1>Вы&nbsp;являетесь владельцем заведения?</h1>
-      <p>Сделаем так, чтобы о&nbsp;вашем ресторане или кафе узнало еще больше людей, которые будут готовить по&nbsp;вашим рецептам!</p>
-      <img class="section__seven__img" src="../assets/photo-star-43ecf436beca7c99a3813ca48ca919e7a170df58f2b2cd5c37f4a0d0de66324b.png" />
-      <a href="https://someth1ngwrong.github.io/Essen__partners/partners/index.html">Подробнее</a>
-    </section>
+        <div class="section__four__four">
+          <img src="../assets/plate6.png" alt="" class="section__four__plate">
+          <h2>Сохраняйте <br> рецепты в&nbsp;личные подборки</h2>
+
+        </div>
+      </section>
+
+      <section class="section__six">
+        <h1>Готовьте блюда по&nbsp;рецептам профессионалов</h1>
+        <p class="body">Наши рецепты и&nbsp;замены к&nbsp;ним пишут повара <br>из&nbsp;ваших любымых заведений Москвы и&nbsp;Петербурга!</p>
+        <img class="section__six__img" src="../assets/plate-purple-58484c9c8e199c11cb2f92ce9c9a281bf518b146033291474e8679052ceab088.png" />
+      </section>
+
+      <section class="section__seven">
+        <div class="seven__one">
+          <h1>У&nbsp;вас свой <br> ресторан <br> или&nbsp;кафе?</h1>
+        </div>
+        <div class="seven__two">
+          <img class="cafe" src="../assets/cafe.jpeg" />
+        </div>
+        <div class="seven__three">
+          <h1>Поможем <br> вам найти <br> клиентов!</h1>
+        </div>
+        <a href="https://someth1ngwrong.github.io/Essen__partners/partners/index.html" class="body">Подробнее</a>
+      </section>
+    </div>
 
     <section class="section__eight">
-      <h2>Вам осталось только приготовить, остальное мы&nbsp;уже продумали за&nbsp;вас!</h2>
-      <a href="index#">Перейти</a>
+      <h2>Мы все за&nbsp;вас продумали. <br>Вам остается наслаждаться готовкой!</h2>
+      <div class="call__to__action__div" >
+        <img src="../assets/plate1-1.png" class="final__meal" id="final__meal1" alt="">
+        <img src="../assets/plate1-2.png" class="final__meal" id="final__meal2" alt="">
+        <img src="../assets/plate1-3.png" class="final__meal" id="final__meal3" alt="">
+        <img src="../assets/plate1-4.png" class="final__meal" id="final__meal4" alt="">
+        <img src="../assets/plate1-5.png" class="final__meal" id="final__meal5" alt="">
+        <img src="../assets/plate1-6.png" class="final__meal" id="final__meal6" alt="">
+        <a href="index#" class="call__to__action">
+          Приготовить что-нибудь вкусное ->
+        </a>
+      </div>
     </section>
 
     <section class="section__nine">
@@ -164,6 +179,26 @@
         <a href="index#">Instagram</a>
       </div>
     </section>
+    <script type="text/javascript">
+      window.onload = function start() {
+        for (var i = 0; i < 6; i++) {
+          var a = Math.floor(Math.random() * 20);
+          id = 'div__' + a;
+          document.getElementById(`${id}`).style.background = "#9897DE";
+        }
+      }
+      setInterval(function circles(){
+        var elems = document.getElementsByClassName('circle');
+        for (var i = 0; i < 21 ; i++) {
+          elems[i].style.background = '#FECE30';
+        }
+        for (var i = 0; i < 6; i++) {
+          var a = Math.floor(Math.random() * 20);
+          id = 'div__' + a;
+          document.getElementById(`${id}`).style.background = "#9897DE";
+        }
+      }, 1500)
+    </script>
   </body>
 </html>
 
