решил трабл индекса

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 
 
-    <link rel="stylesheet" media="all" href="../assets/application.debug-b38ccb961b8865dd13c9d8a0134ce8a69d4ffec3736ac4b375ade6a5ecd491ab.css" data-turbolinks-track="reload" />
-    <script src="../packs/js/application-bb4bfb0fd20ebbe63c07.js" data-turbolinks-track="reload"></script>
+    <link rel="stylesheet" media="all" href="assets/application.debug-b38ccb961b8865dd13c9d8a0134ce8a69d4ffec3736ac4b375ade6a5ecd491ab.css" data-turbolinks-track="reload" />
+    <script src="packs/js/application-bb4bfb0fd20ebbe63c07.js" data-turbolinks-track="reload"></script>
     <script src="http://cdn.ckeditor.com/4.11.3/standard/ckeditor.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js"></script>
@@ -28,7 +28,7 @@
 
   <body>
     <div class="top_menu">
-      <img class="top_menu__logo" src="../assets/logo-bw-d9faa72d0cf4d57999310cbca69d0b8aaa939d737deea6d95f85b259f0216e35.svg" />
+      <img class="top_menu__logo" src="assets/logo-bw-d9faa72d0cf4d57999310cbca69d0b8aaa939d737deea6d95f85b259f0216e35.svg" />
       <a href="http://localhost:3000/posts?category=%D0%97%D0%B0%D0%B2%D1%82%D1%80%D0%B0%D0%BA%D0%B8">Завтраки</a>
       <a href="http://localhost:3000/posts?category=%D0%9E%D0%B1%D0%B5%D0%B4%D1%8B">Обеды</a>
       <a href="http://localhost:3000/posts?category=%D0%A3%D0%B6%D0%B8%D0%BD%D1%8B">Ужины</a>
@@ -46,11 +46,11 @@
   <body>
 
     <section class="section__one">
-      <img class="section__one__plate" src="../assets/plate1.png" alt="">
-      <img class="logo-bw" src="../assets/logo-bw-d9faa72d0cf4d57999310cbca69d0b8aaa939d737deea6d95f85b259f0216e35.svg" />
+      <img class="section__one__plate" src="assets/plate1.png" alt="">
+      <img class="logo-bw" src="assets/logo-bw-d9faa72d0cf4d57999310cbca69d0b8aaa939d737deea6d95f85b259f0216e35.svg" />
       <div class="section__one__group">
-        <img class="section__one__img" src="../assets/first-screen-2.svg" />
-        <img class="section__one__img__2" src="../assets/first-screen-1.svg" />
+        <img class="section__one__img" src="assets/first-screen-2.svg" />
+        <img class="section__one__img__2" src="assets/first-screen-1.svg" />
         <p class="body">Сборник кулинарных рецептов<br>с&nbsp;гибкой заменой ингредиентов</p>
         <a href="index#" class="body">Перейти</a>
       </div>
@@ -99,7 +99,7 @@
 
       <section class="section__five">
         <div class="section__five__div">
-          <img class="section__five__div__img" src="../assets/shape-inverse-03d1d73e2c55e8267cb1fb43d8e311dd2d002a9fac820afd605ef94b29a4f7d4.svg" />
+          <img class="section__five__div__img" src="assets/shape-inverse-03d1d73e2c55e8267cb1fb43d8e311dd2d002a9fac820afd605ef94b29a4f7d4.svg" />
         </div>
         <div class="section__five__h2">
           <h2>Когда сервис поможет вам?</h2>
@@ -114,21 +114,21 @@
       <section class="section__four">
         <div class="section__four__one">
           <h2>Заменяйте <br> ингредиенты <br> под&nbsp;ваши <br> предпочтения</h2>
-          <img src="../assets/plate2.png" alt="" class="section__four__plate">
+          <img src="assets/plate2.png" alt="" class="section__four__plate">
         </div>
 
         <div class="section__four__two">
           <h2>Ищите рецепты <br> под&nbsp;свой тип питания</h2>
-          <!-- <img src="../assets/plate5.png" alt="" class="section__four__plate"> -->
+          <!-- <img src="assets/plate5.png" alt="" class="section__four__plate"> -->
         </div>
 
         <div class="section__four__three">
           <h2>Пробуйте новые рецепты из&nbsp;наших подборок</h2>
-          <!-- <img src="../assets/plate6.png" alt="" class="section__four__plate"> -->
+          <!-- <img src="assets/plate6.png" alt="" class="section__four__plate"> -->
         </div>
 
         <div class="section__four__four">
-          <img src="../assets/plate6.png" alt="" class="section__four__plate">
+          <img src="assets/plate6.png" alt="" class="section__four__plate">
           <h2>Сохраняйте <br> рецепты в&nbsp;личные подборки</h2>
 
         </div>
@@ -137,7 +137,7 @@
       <section class="section__six">
         <h1>Готовьте блюда по&nbsp;рецептам профессионалов</h1>
         <p class="body">Наши рецепты и&nbsp;замены к&nbsp;ним пишут повара <br>из&nbsp;ваших любымых заведений Москвы и&nbsp;Петербурга!</p>
-        <img class="section__six__img" src="../assets/plate-purple-58484c9c8e199c11cb2f92ce9c9a281bf518b146033291474e8679052ceab088.png" />
+        <img class="section__six__img" src="assets/plate-purple-58484c9c8e199c11cb2f92ce9c9a281bf518b146033291474e8679052ceab088.png" />
       </section>
 
       <section class="section__seven">
@@ -145,7 +145,7 @@
           <h1>У&nbsp;вас свой <br> ресторан <br> или&nbsp;кафе?</h1>
         </div>
         <div class="seven__two">
-          <img class="cafe" src="../assets/cafe.jpeg" />
+          <img class="cafe" src="assets/cafe.jpeg" />
         </div>
         <div class="seven__three">
           <h1>Поможем <br> вам найти <br> клиентов!</h1>
@@ -157,12 +157,12 @@
     <section class="section__eight">
       <h2>Мы все за&nbsp;вас продумали. <br>Вам остается наслаждаться готовкой!</h2>
       <div class="call__to__action__div" >
-        <img src="../assets/plate1-1.png" class="final__meal" id="final__meal1" alt="">
-        <img src="../assets/plate1-2.png" class="final__meal" id="final__meal2" alt="">
-        <img src="../assets/plate1-3.png" class="final__meal" id="final__meal3" alt="">
-        <img src="../assets/plate1-4.png" class="final__meal" id="final__meal4" alt="">
-        <img src="../assets/plate1-5.png" class="final__meal" id="final__meal5" alt="">
-        <img src="../assets/plate1-6.png" class="final__meal" id="final__meal6" alt="">
+        <img src="assets/plate1-1.png" class="final__meal" id="final__meal1" alt="">
+        <img src="assets/plate1-2.png" class="final__meal" id="final__meal2" alt="">
+        <img src="assets/plate1-3.png" class="final__meal" id="final__meal3" alt="">
+        <img src="assets/plate1-4.png" class="final__meal" id="final__meal4" alt="">
+        <img src="assets/plate1-5.png" class="final__meal" id="final__meal5" alt="">
+        <img src="assets/plate1-6.png" class="final__meal" id="final__meal6" alt="">
         <a href="index#" class="call__to__action">
           Приготовить что-нибудь вкусное ->
         </a>
@@ -170,7 +170,7 @@
     </section>
 
     <section class="section__nine">
-      <img class="section__nine__img" src="../assets/logo-color-d08521c329aa90ffd211b235dd5b68e4cccfcb3f266ab5c22038015430345def.svg" />
+      <img class="section__nine__img" src="assets/logo-color-d08521c329aa90ffd211b235dd5b68e4cccfcb3f266ab5c22038015430345def.svg" />
       <p>Сборник кулинарных рецептов с&nbsp;гибкой заменой ингредиентов</p>
       <div class="section__nine__a">
         <a href="index#">О сервисе</a>
