added link to the site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Essen</title>
     <meta charset="utf-8">
     <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="dFWU86dnGFCHf1Lmq1dTU3bf0uQ3b/QcWbsUMpcfaVM20jhIe7vDA8wgjEVZYlLyU9z6Yaq4XsgYVJOWn0e5ZQ==" />
+    <meta name="csrf-token" content="dFWU86dnGFCHf1Lmq1dTU3bf0uQ3b/QcWbsUMpcfaVM20jhIe7vDA8wgjEVZYlLyU9z6Yaq4XsgYVJOWn0e5ZQ==" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon"> <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 
 
 <!-- if notice -->
@@ -52,7 +53,7 @@
         <img class="section__one__img" src="assets/first-screen-2.svg" />
         <img class="section__one__img__2" src="assets/first-screen-1.svg" />
         <p class="body">Сборник кулинарных рецептов<br>с&nbsp;гибкой заменой ингредиентов</p>
-        <a href="index#" class="body">Перейти</a>
+        <a href="https://essen-v2.herokuapp.com" target="blank" class="body">Перейти</a>
       </div>
       <div class="section__one__div">
         <div id="div__1" class="circle"></div>
@@ -81,7 +82,7 @@
 
     <div class="">
       <nav>
-        <a class="body">Начать готовить</a>
+        <a href="https://essen-v2.herokuapp.com" target="blank" class="body">Начать готовить</a>
       </nav>
 
       <section class="section__two">
@@ -163,7 +164,7 @@
         <img src="assets/plate1-4.png" class="final__meal" id="final__meal4" alt="">
         <img src="assets/plate1-5.png" class="final__meal" id="final__meal5" alt="">
         <img src="assets/plate1-6.png" class="final__meal" id="final__meal6" alt="">
-        <a href="index#" class="call__to__action">
+        <a href="https://essen-v2.herokuapp.com" target="blank" class="call__to__action">
           Приготовить что-нибудь вкусное ->
         </a>
       </div>
